<resources>
    <string name="app_name">BLE_RSSI_Plotter</string>
    <string name="BLE_is_not_supported">BLE is not supported</string>
    <string name="BLE_is_supported">BLE is supported!</string>
    <string name="start_scaning_ble">Start scaning BLE</string>
    <string name="dump_to_file">Dump to file:</string>
    <string name="insert_file_name">Insert file name</string>
    <string name="how_long">How long?</string>
    <string name="time_of_dumping_s">Time of dumping [s]</string>
    <string name="start_dumping_to_file">Start dumping to file…</string>
    <string name="stop_scan">Stop scan</string>
    <string name="find_devices">Find devices</string>
    <string name="insert_required_rows">Insert required rows</string>
    <string name="restart">RESTART</string>
</resources>