<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/toggle_scan_ble_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/start_scaning_ble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintLeft_toRightOf="@id/toggle_scan_ble_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/toggle_scan_ble_button" />

    <TextView
        android:id="@+id/dump_to_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dump_to_file"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/toggle_scan_ble_button"
        app:layout_constraintTop_toBottomOf="@id/toggle_scan_ble_button" />

    <EditText
        android:id="@+id/file_name"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/insert_file_name"
        app:layout_constraintLeft_toRightOf="@id/dump_to_file"
        app:layout_constraintTop_toBottomOf="@id/toggle_scan_ble_button" />

    <TextView
        android:id="@+id/how_many_rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How many?"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/required_dumping_rows"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/dump_to_file" />

    <EditText
        android:id="@+id/required_dumping_rows"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"
        android:hint="@string/insert_required_rows"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_name" />

    <Button
        android:id="@+id/start_dumping_to_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/start_dumping_to_file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_many_rows" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ble_rv"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_dumping_to_file"
        tools:listitem="@layout/recycler_view_row_ble" />
    <!--    i ten tools:listitem="@layout/recycler_view_row_ble"/
            to opis jak wyglada caly recycle view
            (pojedynczy skladnik) calej jebanej listy
    -->

    <TextView
        android:id="@+id/file_directory_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ble_rv" />

    <TextView
        android:id="@+id/path_to_file_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_directory_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>